# travel-monitor

./: .gitignore  LICENSE  README.md
hw1/: CMakeLists.txt  Makefile  README.txt  testFile.sh
hw1/include/: bit_array.h  bitarray.h  bloom_filter.h  bloomfilter.h  commands.h  common.h  data.h  handler.h  hash.h  hashtable.h  skip_list.h  skiplist.h  types.h  util.h
hw1/resources/: countries.txt  viruses.txt
hw1/src/: bloom_filter.c  bloomfilter.c  commands.c  data.c  handler.c  hash.c  hashtable.c  hashtable.h  main.c  skip_list.c  skiplist.c  util.c
hw1/src/test/: bitarray_test.c  bloomfilter_test.c  hashtable_test.c  skiplist_test.c
hw1/test/: countries.txt  names.txt  surnames.txt  testFile.sh  test_ba.c  test_bf.c  test_sl.c  viruses.txt
hw2/: CMakeLists.txt  Makefile  README.txt  create_infiles.sh  my_bash.sh  requests.txt  testFile.sh
hw2/include/: bloomfilter.h  comm_protocol.h  commands.h  data.h  msg.h  pipe.h  util.h
hw2/input_dir/China/: China-1.txt  China-3.txt
hw2/input_dir/France/: France-1.txt  France-2.txt  France-3.txt
hw2/input_dir/Greece/: Greece-2.txt
hw2/input_dir/Italy/: Italy-2.txt  Italy-3.txt
hw2/input_dir_test/China/: China-2.txt
hw2/input_dir_test/Greece/: Greece-1.txt  Greece-3.txt
hw2/input_dir_test/Italy/: Italy-1.txt
hw2/resources/: surnames.txt
hw2/src/: bloomfilter.c  comm_protocol.c  commands.c  data.c  handler.c  hashtable.c  monitor.c  msg.c  travelmonitor.c  util.c
hw2/src/test/: test.c
hw3/: CMakeLists.txt  Makefile  README.txt  test_cmd.txt
hw3/include/: bitarray.h  bloomfilter.h  comm_protocol.h  data.h  handler.h  hashtable.h  msg.h  pipe.h  skiplist.h  sockets.h  task_cqueue.h  task_queue.h  thpool.h  tm_client.h  tm_server.h  travelmonitor.h  util.h
hw3/scripts/: create_infiles.sh  my_bash.sh  testFile.sh
hw3/src/: comm_protocol.c  commands.c  data.c  handler.c  hash.c  monitor.c  msg.c  skiplist.c  sockets.c  task_cqueue.c  task_queue.c  test_thpool.c  thpool.c  tm_client.c  tm_server.c  travelmonitor.c  util.c
hw3/testing/: operations.txt  travel_requests.txt
